--- a/fluent.conf
+++ b/fluent.conf
@@ -1,7 +1,11 @@
+<match fluent.**>
+  type null
+</match>
+
 <source>
   type tail
   path /var/log/containers/*.log
-  pos_file fluentd-docker.pos
+  pos_file /var/log/fluentd-containers.log.pos
   time_format %Y-%m-%dT%H:%M:%S
   tag kubernetes.*
   format json
